test: add cases for checking external API